# fcgi_responder

./: CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build_and_test.yml
cmake/: fcgi_responderConfig.cmake.in
examples/asio_example/: CMakeLists.txt  main.cpp
examples/asio_requester_example/: CMakeLists.txt
examples/qt_example/: CMakeLists.txt  main.cpp
examples/qt_requester_example/: CMakeLists.txt
examples/using-asio/: CMakeLists.txt  main.cpp
examples/using-asio-requester/: CMakeLists.txt  main.cpp
examples/using-qt/: CMakeLists.txt  main.cpp
examples/using-qt-requester/: CMakeLists.txt  main.cpp
fuzz_tests/: CMakeLists.txt  afl_dict.txt
fuzz_tests/input/: AbortRequest  CantMultiplex  GetValueChangedSettings  GetValuesAllDefaultSettings  Multiplexing  Overloaded  ReceivingMessagesInLargeChunks  RecordMessageReadError  RecordReadErrorMisalignedNameValue  Request  UnexpectedRecord  UnknownRole  UnknownType
fuzz_tests/src/: main.cpp
include/: constants.h  request.h  responder.h  response.h  types.h
include/fcgi_responder/: fcgi_limits.h  request.h  requester.h  responder.h  response.h
src/: constants.h  constants_impl.h  datareaderstream.cpp  datareaderstream.h  datawriterstream.cpp  datawriterstream.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  errors.cpp  errors.h  inputstreamdualbuffer.cpp  inputstreamdualbuffer.h  message.cpp  message.h  msgabortrequest.cpp  msgabortrequest.h  msgbeginrequest.cpp  msgbeginrequest.h  msgendrequest.cpp  msgendrequest.h  msggetvalues.cpp  msggetvalues.h  msggetvaluesresult.cpp  msggetvaluesresult.h  msgparams.cpp  msgparams.h  msgunknowntype.cpp  msgunknowntype.h  multipartstream.h  namevalue.cpp  namevalue.h  record.cpp  record.h  recordreader.cpp  recordreader.h  request.cpp  requestdata.cpp  requestdata.h  (+16 more)
tests/: CMakeLists.txt  test_datareaderstream.cpp  test_multipartstream.cpp  test_record_serialization.cpp  test_request.cpp  test_requester.cpp  test_responder.cpp  test_utils.cpp
utils/fcgi_responder_benchmark/: CMakeLists.txt  fcgi_responder_benchmark.cpp
utils/fuzz_input_generator/: CMakeLists.txt  input_generating_test_responder.cpp
utils/libfcgi_benchmark/: CMakeLists.txt  libfcgi_benchmark.cpp
